jupyter-notebook-openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-notebook
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: jupyter-notebook
